# langchain_tutorial

./: .gitignore  pyproject.toml
CH-1/: 1_LLM_CALL.ipynb  2_Messages.ipynb  3_Guinding_in_prompts.ipynb
CH-2/: 1_First Chain.ipynb  2_Chain_with_custom.ipynb  3_Parallel_chain.ipynb  4_Conditional_chain.ipynb
CH-3/: 1_ReAct_agent_intro.ipynb  2_ReAct_db_agent.ipynb  demo.py  init_db.py
CH-3/sales_db/: sales.db
